# property_sync

./: CMakeLists.txt  README.md
include/: avatar_prop.h  chat_prop.h  chat_record.h  equip_prop.h  friend_prop.h  property.h  property_bag.h  property_basic.h  property_queue.h  property_slots.h  property_stl.h  property_vec.h
meta/: CMakeLists.txt  config.json  generate_property.cpp  generate_property_sync.cpp  property_meta.cpp
meta/mustache/: property_cpp.mustache  property_h.mustache  property_proxy_h.mustache
src/: avatar_prop.cpp  chat_prop.cpp  equip_prop.cpp
test/: CMakeLists.txt  config.json  generate_entry.cpp  main.cpp  prop_flags.h  property_test.cpp  property_test.h  simple_item.cpp  simple_item.h
